--- a/lesson2/style.css
+++ b/lesson2/style.css
@@ -155,6 +155,7 @@ h1 {
 .three_columns li {
 	width: 30%;
 	text-align: center;
+	list-style: none;
 }
 
 .three_columns li:nth-child(2) {
@@ -268,6 +269,7 @@ span {
 .privilege li {
 	text-align: left;
 	margin-bottom: 35px;
+	list-style: none;
 }
 .privilege li:nth-child(2) {
 	margin-bottom: 35px;
