--- a/lesson2/style.css
+++ b/lesson2/style.css
@@ -20,12 +20,14 @@ header {
 	color: #fff;
 	text-align: center;
 	padding: 65px 0 115px;
+	box-sizing: border-box;
 }
 
 .container {
 	width: 80%;
 	max-width: 1200px;
 	margin: 0 auto;
+	box-sizing: border-box;
 }
 
 .flex_container {
@@ -59,6 +61,7 @@ a {
 .top_menu {
 	text-align: center;
 	margin-bottom: 70px;
+	
 }
 
 .top_menu a {
@@ -150,6 +153,7 @@ h1 {
 .three_columns {
 	background-color: #eeeeef;
 	padding-top: 60px;
+	box-sizing: border-box;
 }
 
 .three_columns li {
@@ -206,6 +210,7 @@ h3 {
 .two_columns {
 	background-color: #f5f5f5;
 	padding: 60px 0 40px;	
+	box-sizing: border-box;
 }
 
 .two_columns_info {
