--- a/lesson7/style.css
+++ b/lesson7/style.css
@@ -1,231 +1,732 @@
-html{
-	scroll-behavior: smooth;
+*,
+*:before,
+*:after{box-sizing: border-box;}
+
+body {background: #fff  ;}
+a {text-decoration: none;}
+p, h3, h4 {margin: 0;}
+ul {
+    padding:0;
+    list-style: none;
 }
-*{
-	box-sizing: border-box;
+
+.paragraph {
+  text-align: left;
+  color: #8d8f92;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
 }
-body{
- font-family: 'Arial', 'Calibri', sans-serif;
-}
-.section{
-	padding-top: 30px;
-}
-.a{
-	text-decoration: none;
-	color: #A4AEAD;
-}
-h1, h2, h4{
-	text-transform: uppercase;
-	line-height: 1.6em;
-}
-p{
-	color: #8D8F92;
-	line-height: 1.6em;
-}
-h2{
-	border-left: 8px solid #aeb4b8;
-	margin-bottom: 20px;
-	padding-left: 10px;
-}
-.wrapper {
-	max-width: 1200px;
-  margin: auto;
-}
-.logo{
-	background-color: #1D2126;
-  text-align: center;
- }
-.logo .a{
-	display: flex;
-	font-size: 13px;
-	line-height: 1.2em;
-	text-transform: uppercase;
-	height: 30px;
-  text-align: right;
-  padding: 6px;	
-}
-.header{
-	background-color: #1D2126;
-	}
-.header .wrapper{
-	display: flex;
-	height: 80px;
-	justify-content: space-between;
-	align-items: center;
-}
-.wrapper .menu{
-	display: flex;
-	justify-content: space-between;
-	align-items: stretch;
-	text-transform: uppercase;
-	text-align: right;
-}
-.wrapper .menu li a{
-	text-decoration: none;
-	color: #fff;
-}
-.menu{
-  margin: 0 -13px;
-}
-.menu li{
-	padding: 6px 8px;
-	font-size: 14px;
-	display: list-item;
-	text-transform: uppercase;
-}
-.menu a{
-	display: block;
-  transition: color 1s;
-  padding: 7px 8px;
-}
-.home{
-	border-radius: 6px;
-	border: 2px solid #23B7A4;
-	display: inline-block;
-}
-.banner{
-	background: url(image/background.png) no-repeat 0 0;
-  height: 680px;
-  width:auto;
-  background-repeat: no-repeat;
-  position: relative;
-	background-size: cover;
-	min-width: 1200px;
-}
-h1{
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 36px;
-	text-transform: uppercase;
-	text-align: left;
-	margin-bottom: 35px;
-	padding-top: 230px;
-	color: white;
-}
-.banner p{
-	padding-bottom: 30px;
-	display: block;
-}
-.lovely{
-	background-color: #39444D;
-}
-.lovely h2{
-	color: white;
-}
-.lovely button_transparent{
-	padding: 10px;
-} 
-.button{	
-  padding: 10px;
-	border-radius: 6px;
-	text-align: center;
-	text-decoration: none;
-	color: #fff;
-	border: 2px solid #fff;
-	display: inline-block;
-}
-.button_background{
-	background-color: #239db7;
-}
-.button:hover {
-	background-color: #fd00ff;
-}
-.button_transparent:hover{
-	color: black;
-}
-.menu .m:hover{
-	border-radius: 6px;
-	border: 2px solid #5B6168;
-	display: inline-block;
-}
-.number{
-	line-height: 50px;
-  text-align: center;
-  background-color: #23B7A4;
-	height: 50px;
-	width: 50px;
-	margin-right: 25px;
-	flex-shrink: 0;
-}
-.number{color: white;}
-.numb{
-	display: flex;
-	justify-content: space-between;
-}
-.wrapper .R{
-	display: flex;
-  justify-content: space-between;
-  align-items: stretch;
+
+.white-text-header {
+  color: #ffffff;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 36px;
+  font-weight: 400;
   text-transform: uppercase;
-  text-align: center;
-	padding-top: 12px;
 }
-.remark li a{
-	line-height: 50px;
+
+.black-text-header {
+  color: #292f36;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 36px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.about {
+  width: 650px;
+  margin-top: 40px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.little-title {
+  margin: 0;
+  color: #292f36;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.right-about-header {
+  margin: 0;
+  height: 14px;
+  color: #292f36;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.whitehead {
+  color: #ffffff;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 42px;
+  text-transform: uppercase;
+}
+
+.name-team-header {
+  color: #292f36;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.paragraph-team {
+  color: #8d8f92;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.contact-input {
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #8d8f92;
+}
+
+.copyright {
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.banner-text {
+  color: #ccd0d7;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.wrapper {
+  max-width: 1142px;
+  min-width: 320px;
+  margin: 0 auto;
+}
+
+/* TOP section header*/
+.header {background-color: #1d2126;}
+
+.top {
+  height: 81px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main-menu {
+  width: 626px;
+  display: flex;
+  margin-right: 12px;
+}
+
+.logopic {
+  padding-top: 6px;
+}
+
+.menu-button-home {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 5px 10px;
+  border: 2px solid #23b7a4;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #23b7a4;
+  transition: all 0.4s ease 0s;
+  margin-right: 14px;
+  margin-left: 5px;
+}
+
+.menu-button-home:hover {
+  color: #a4aead;
+  border-color: #494949;
+  transition: .4s;
+}
+
+.menu-button {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  color: #a4aead;
+  text-transform: uppercase;
+  border: 2px solid #1d2126;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 14px;
+  margin-left: 15px;
+}
+
+.menu-button:hover {
+  border: 2px solid #494949;
+  transition: .4s;
+}
+
+/* banner section*/
+.banner {
+  height: 660px;
+  background: url(image/background.png) no-repeat;
+  background-size: cover;
+}
+
+.banner-inside {
+  padding-top: 220px;
+  height: 410px;
+  width: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.banner-text {
+  color: #ccd0d7;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+  margin-top: -18px;
+  width: 649px;
+}
+
+.two-button-banner {display: flex;}
+
+.button-banner {
+  margin-right: 11px;
+  width: 124px;
+  height: 44px;
+  color: #fff;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  border: 2px solid #fff;
+  border-radius: 6px;
   text-align: center;
-  background-color: #23B7A4;
-	height: 50px;
-	width: 50px;
-	margin-right: 70px;
-	flex-shrink: 0;
- }
-.remark a{
+  padding-top: 12px;
+}
+
+.button-banner:hover {
+  background-color: #23b7a4;
+  border: 2px solid #23b7a4;
+  transition: .4s;
+}
+
+/* about section*/
+.about-section {
+  height: auto;
+  max-height: auto;
+}
+
+.borderleft-header {
+  display: flex;
+  align-items: center;
+  padding-top: 78px;
+  padding-bottom: 10px;
+}
+
+.box-h2 {
+  width: 10px;
+  height: 35px;
+  background-color: #e1e6ea;
+  margin-right: 10px;
+  margin-left: 2px;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: row;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  width: 650px;
+  height: 222px;
+}
+
+.about-sizing {
+  margin-top: 26px;
+}
+
+.social-icons {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 52px 0 40px;
+}
+
+.social-icons a {
+  width: 60px;
+  height: 60px;
+  margin-right: 1px;
+  padding: 16px;
+  display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	background: #23b7a4;
+	color: #fff;
+	font-size: 24px;
 	text-decoration: none;
-	color: white;
 }
-.remark li{
-	display: flex;
-	justify-content: space-between;
+
+.social-icons a:hover {
+  background: #d0d5d9;
 }
-.rem a:hover{
-	background-color: darkorange;
-	color: black;
+
+.section {
+  display: column;
+  padding-top: 46px;
 }
-.meet{}
-.travel{}
-.setting{
-	text-align: center;
+
+.flex-column-right {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin: 2px 0 34px 35px;
 }
-.setting p{
-	padding: 27px 0 60px;
-  line-height: 1.5em;
+
+.block-number {
+  background-color: #23b7a4;
+  min-width: 50px;
+  min-height: 50px;
+  text-align: center;
+  padding-top: 4px;
 }
-.features{}
-.map{}
-.contacts{}
-.container{
-	display: flex;
-	justify-content: space-between;
+
+.header-text {
+  margin: 0 0 0 20px;
 }
-.footer_content{
-	background-color: #1D2126;
+
+.corect {
+  margin-top: 12px;
 }
-.footer_content p{
+
+.wearemodest {
+  margin-bottom: 100px;
+}
+
+/* Line section */
+.line {
+
+  width: 100%;
+  height: 3px;
+  background-color: #dde1e4;
+}
+
+/* our team block */
+.ourteam {
+  text-align: center;
+  height: 648px;
+}
+
+.line-fotos {
+  margin: 42px 0 0 2px;
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: auto;
+  grid-column-gap: 18px;
+}
+
+.foto {
+  position: relative;
+  max-width: 100%;
+  max-height: auto;
+  background-color: #e1e6ea;
+  text-align: left;
+}
+
+.foto img {
+  display: grid;
+  width: 100%;
+}
+
+.pos-name {
+  height: 50px;
+  margin: 18px auto auto 20px;
+}
+
+.foto-nav-container {
+  display: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.foto-nav {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  list-style: none;
+  margin: 124px 0 0 0;
+  justify-content: center;
+}
+
+.foto-nav-item {
+  width: 50px;
+  height: 50px;
+  background: #ff4747;
+  margin-right: 1px;
+}
+
+.social_item a {
+  display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+  background-color: #4e5a62;
+	color: #fff;
+}
+
+.foto:hover .foto-nav-container {
+  display: block;
+}
+
+.foto:hover .name-team-header,
+.foto:hover .paragraph-team {
   color: white;
 }
-.social a{}
-.grid{}
-.grid .info{
-	display: grid;
-	grid-template-columns: 7fr 5fr;
-	grid-gap: 30px;
+
+.foto-nav-item:hover {
+  background-color: #d0d5d9;
+  transition: .4s;
 }
-.grid .meet{
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-column-gap: 30px;
+
+.foto:hover {
+  background-color: #3a454d;
+  transition: .4s;
 }
-.grid .setting {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 30px;
+
+/* WORK */
+.work {
+  height: 898px;
+  background-color: #3a454d;
 }
-.grid .features {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 30px;
+
+.pic {
+  padding-left: 2px;
+  display: grid;
+  grid-template-columns: repeat(3,auto);
+  grid-column-gap: 30px;
+  grid-row-gap: 32px;
+  z-index: 1;
+  width: 100%;
 }
-.grid .travel{
- display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 30px;
+
+.pictures-area {
+  width: 100%;
+  margin-top: 42px;
+}
+
+.hit-pic {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  align-items: center;
+}
+
+.hit-pic img {
+  display: grid;
+  width: 100%;
+}
+
+.plus {
+  display: none;
+  position: absolute;
+  color: #fff;
+  font-size: 52px;
+  margin-top: 36px;
+  margin-left: -5px;
+}
+
+.pic-name {
+  bottom: 0;
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  background: rgba(0, 0, 0, 0.5);
+  padding-top: 20px;
+}
+
+.work-head {
+  padding-left: 20px;
+  color: white;
+}
+
+.hit-pic img:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.hit-pic:hover .pic-name {
+  display: block;
+  width: 100%;
+  cursor: pointer;
+}
+
+.hit-pic:hover .pic-name {
+  color: white;
+}
+
+.hit-pic:hover .plus {
+  display: block;
+  color: white;
+}
+
+.box-h3 {
+  width: 10px;
+  height: 35px;
+  background-color: #4e5a62;
+  margin-right: 10px;
+}
+
+.work-block {
+  display: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.work-block:hover {
+  display: block;
+  z-index: 99;
+}
+
+.button-block-work {
+  display: flex;
+  justify-content: center;
+  margin-left: 18px;
+  margin-top: 60px;
+}
+
+.button-work {
+  margin-right: 11px;
+  width: 148px;
+  height: 44px;
+  color: #fff;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 12px;
+}
+
+.button-work:hover {
+  background-color: #23b7a4;
+  border: 2px solid #23b7a4;
+  transition: .4s;
+}
+
+/* services section */
+.grid-services {
+  margin-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: 220px;
+  grid-column-gap: 38px;
+  grid-row-gap: 90px;
+  width: 1140px;
+  height: 696px;
+}
+
+.serv {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  height: 216px;
+}
+
+.cntr {
+  text-align: center;
+  margin-top: 20px;
+  color: #8d8f92;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.serv h4 {
+  margin-top: 32px;
+}
+
+.serv a:hover{
+  transition: 0.3s;
+}
+
+/* features section */
+.features {
+  height: 732px;
+  background-color: #3a454d;
+}
+
+.pic-features {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-column-gap: 18px;
+  margin-top: 48px;
+}
+
+.widthpic {
+  width: 100%;
+  height: auto;
+}
+
+.flex-pic {
+  color: #dcdfe1;
+  line-height: 26px;
+  max-width: auto;
+}
+
+.white {
+  color: white;
+  padding-top: 42px;
+  padding-bottom: 20px;
+}
+
+/* contatcs */
+.contact {
+  height: 880px;
+}
+
+.contacts-add-form {display: flex;}
+
+.contacthead {
+  margin-top: -15px;
+  font-weight: bold;
+}
+
+.text-contacts {
+  padding-top: 56px;
+  margin-left: 8px;
+  display: flex;
+  flex-direction: column;
+  width: 534px;
+}
+
+.contacthead2 {
+  font-size: 18px;
+  font-weight: bold;
+}
+.map-block {
+  background-image: url(map.html);
+  background-size: cover;
+  width: 100%;
+  height: 350px;
+  z-index: 1;
+  margin-top: 44px;
+}
+
+
+.cont {
+  margin-top: 32px;
+  width: 100%;
+}
+
+.contacts-form {
+  display: flex;
+  flex-direction: column;
+  width: 560px;
+  height: 400px;
+  background-color: #fff;
+  z-index: 99;
+  margin: -400px auto auto 580px;
+}
+
+.contact-line {
+  display: block;
+  padding-right: 0px;
+  margin: 20px 16px 0 0 ;
+}
+
+.flex-contact-line {
+  display: flex;
+  margin: 8px auto auto 70px;
+}
+
+.contact-message {
+  margin: 8px auto auto 70px;
+}
+
+.input-1 {
+  width: 100%;
+  height: 44px;
+  background-color: #eaeef1;
+  border: 0;
+  border-radius: 4px;
+}
+
+.input-2 {
+  width: 210%;
+  height: 159px;
+  background-color: #eaeef1;
+  border: 0;
+  border-radius: 4px;
+}
+
+.button-block-contact {
+  display: flex;
+  margin: 24px auto auto 70px;
+}
+
+.button-contact {
+  margin-right: 11px;
+  width: 148px;
+  height: 44px;
+  background-color: #23b7a4;
+  color: #fff;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 13px;
+}
+
+.button-contact:hover {
+  background-color: grey;
+  transition: .4s;
+}
+
+/*footer*/
+.footer {
+  background-color: #3a454d;
+}
+.footer-align {
+  display: flex;
+  height: 95px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.social-icons-footer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.social-icons-footer a {
+  width: 34px;
+  height: 34px;
+  margin: 0;
+  padding: 0px;
+  display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	color: #fff;
+}
+
+.social-icons-footer a:hover {
+  background: #d0d5d9;
 }
